<resources>
    <string name="app_name">Capstone Project</string>
    <string name="app_icon_desc">App Icon</string>
    <string name="app_title">Nail Analysis</string>
    <string name="app_author">by Xplisit Team</string>
    <string name="button_take_title">Take a picture</string>
    <string name="or_text_main">or</string>
    <string name="btn_upload_text">Upload an existing picture</string>
    <string name="preview_image_desc">Preview Image</string>
    <string name="preview_image_question">Are you sure you want to use this picture?</string>
    <string name="btn_no_text">No</string>
    <string name="btn_yes_text">Yes</string>
    <string name="not_valid_image_message">Image is not valid!</string>
    <string name="rejected_permission_message">You need to allow the permission in order to use this app</string>
    <string name="disease_title_text">Possibly Identified Disease:</string>
    <string name="description_title_text">Description:</string>
    <string name="treatment_tips_text">Treatment Tips:</string>
    <string name="title_activity_detail">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="detail_activity_toolbar_title">Analysis Result</string>
    <string name="analysed_picture_desc">Analysed Picture</string>
    <string name="result_illustration_desc">Result Illustration</string>
    <string name="process_failed_illustration">Process Failed</string>
    <string name="expression_error_text_1">Oops!</string>
    <string name="expression_error_text_2">Hmm..</string>
    <string name="upload_error_message">The analyzing process has been failed, please try again</string>
    <string name="btn_fail_text">Back to home</string>
    <string name="analyze_progress_text">Analyzing ...</string>
    <string name="disease_not_found_message">We cannot identified any disease from picture that you\'ve sent</string>
    <string name="nail_object_error_message">We didn\'t find any nail object in picture that you\'ve sent. Please try again.</string>
    <string name="tv_accuracy_text">Accuracy:</string>
    <string name="btn_true_desc">Use Picture Button</string>
    <string name="btn_false_desc">Cancel Button</string>
    <string name="btn_true_text">Use</string>
    <string name="btn_false_text">Cancel</string>
</resources>