<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.home.MainActivity">

    <ImageView
        android:id="@+id/img_icon"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/icon"
        android:layout_marginTop="64dp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_app_title"
        android:contentDescription="@string/app_icon_desc" />

    <TextView
        android:id="@+id/tv_app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toBottomOf="@id/img_icon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_app_author"/>

    <TextView
        android:id="@+id/tv_app_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_author"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/tv_app_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_take"/>

    <Button
        android:id="@+id/btn_take"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_take_title"
        android:layout_marginTop="220dp"
        app:layout_constraintTop_toBottomOf="@id/tv_app_author"
        app:layout_constraintLeft_toLeftOf="@id/btn_upload"
        app:layout_constraintRight_toRightOf="@id/btn_upload"
        app:layout_constraintBottom_toTopOf="@id/tv_or"/>

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_text_main"
        app:layout_constraintTop_toBottomOf="@id/btn_take"
        app:layout_constraintLeft_toLeftOf="@id/btn_take"
        app:layout_constraintRight_toRightOf="@id/btn_take"
        app:layout_constraintBottom_toTopOf="@id/btn_upload"/>

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/btn_upload_text"
        app:layout_constraintTop_toBottomOf="@id/tv_or"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>