<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/preview_image_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.home.PreviewImageActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/preview_image_card"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="18dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <ImageView
                android:id="@+id/img_preview"
                android:layout_width="320dp"
                android:layout_height="410dp"
                android:contentDescription="@string/preview_image_desc"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_question"/>

            <TextView
                android:id="@+id/tv_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center"
                android:text="@string/preview_image_question"
                android:textSize="16sp"
                android:textColor="@color/default_text"
                android:lineSpacingExtra="8dp"
                app:layout_constraintTop_toBottomOf="@id/img_preview"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/btn_true"/>

            <ImageButton
                android:id="@+id/btn_true"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_round_check"
                android:background="@drawable/round_button_bg"
                app:layout_constraintTop_toBottomOf="@id/tv_question"
                app:layout_constraintLeft_toRightOf="@id/btn_false"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_btn_true"
                android:contentDescription="@string/btn_true_desc" />

            <TextView
                android:id="@+id/tv_btn_true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/btn_true_text"
                android:textSize="12sp"
                android:textAllCaps="true"
                android:textColor="?android:attr/colorPrimary"
                app:layout_constraintTop_toBottomOf="@id/btn_true"
                app:layout_constraintLeft_toLeftOf="@id/btn_true"
                app:layout_constraintRight_toRightOf="@id/btn_true"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageButton
                android:id="@+id/btn_false"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/ic_baseline_clear"
                android:background="@drawable/round_button_bg"
                app:layout_constraintTop_toTopOf="@id/btn_true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/btn_true"
                app:layout_constraintBottom_toBottomOf="@id/btn_true"
                android:contentDescription="@string/btn_false_desc" />

            <TextView
                android:id="@+id/tv_btn_false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/btn_false_text"
                android:textSize="12sp"
                android:textColor="?android:attr/colorPrimary"
                android:textAllCaps="true"
                app:layout_constraintTop_toBottomOf="@id/btn_false"
                app:layout_constraintLeft_toLeftOf="@id/btn_false"
                app:layout_constraintRight_toRightOf="@id/btn_false"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_progress_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/analyze_progress_text"
        android:textSize="25sp"
        android:textColor="@color/white_darker"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/progress_bar"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:progressTint="@color/teal_200"
        android:progressBackgroundTint="@color/white_darker"
        android:progressDrawable="@drawable/progressbar_bg"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/tv_progress_status"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>